# justapis-c-sdk

./: .gitignore  CMakeLists.txt  README.md
include/: cJSON.h  ja_config.h  ja_config.h.in  justapis.h  mosquitto_config.h
include/mosquitto/lib/: config.h  mosquitto_internal.h
samples/ns_mqtt_demo_cli/: CMakeLists.txt
samples/ns_mqtt_demo_cli/NSMQTTDemoCLI.xcodeproj/: project.pbxproj
samples/ns_mqtt_demo_cli/NSMQTTDemoCLI.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
samples/ns_mqtt_demo_cli/NSMQTTDemoCLI.xcodeproj/project.xcworkspace/xcshareddata/: NSMQTTDemoCLI.xcscmblueprint
samples/ns_mqtt_demo_cli/src/: main.c
src/: justapis.c
src/mosquitto/lib/: memory_mosq.c  mosquitto.c  net_mosq.c  thread_mosq.c
test/: test_helpers.c  test_helpers.h  test_request_handlers.c  test_request_handlers.h  tests.c
test/cheat/: cheat.h  cheats.h
test/civetweb/: VERSION-1.9.1.md  civetweb.c  civetweb.h  handle_form.inl  md5.inl
